# mltactoe

./: .clang-format  .clang-tidy  CMakeLists.txt
apps/: CMakeLists.txt  ai_players.cpp  player.cpp  trainer.cpp
docs/: CMakeLists.txt
include/mltactoe/: agent-human.h  agent-ml.h  agent.h  mltactoe.h
src/: CMakeLists.txt  agent-human.cpp  agent-ml-impl.cpp  agent-ml-impl.h  agent-ml.cpp  mltactoe-impl.cpp  mltactoe-impl.h  mltactoe.cpp
tests/: CMakeLists.txt  mltactoe-test.cpp
